move name map processing into NominatimImporter/Updater
The PhotonDoc now only contains preprocessed names for itself
and its address parts. This reduces the size of data that needs to
be cached for addresses and means that the processing happens in
a central place instead in the converters for elasticsearch.